--- a/css/asosiy.css
+++ b/css/asosiy.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -12,10 +13,11 @@ ul{
 .container{
     max-width: 1200px;
     margin: 0 auto;
+    font-family: "Parkinsans", sans-serif;
 }
 
 nav{
-    background-color: ghostwhite;
+    background-color: #BCE5FF;
     position: fixed;
     top: 0px;
     left: 0;
@@ -28,7 +30,6 @@ nav .container{
     align-items: center;
     justify-content: space-between;
     padding: 20px 6px;
-    
 }
 
 .logo{
@@ -36,20 +37,20 @@ nav .container{
     align-items: center;
     gap: 4px;
     font-family: "Jaro", sans-serif;
-    animation: logo 2s linear infinite;
+    animation: logo 3s linear infinite;
 }
 
 @keyframes logo{
     0%{
         transform: rotateY(0deg);
-        color: blue;
+        color: rgb(30, 30, 251);
     }
     50%{
         transform: rotateY(180deg);
         color: rgb(32, 32, 103);
     }
     100%{
-        color: rgb(33, 33, 147);
+        color: rgb(63, 63, 149);
         transform: rotateY(360deg);
     }
 }
@@ -132,7 +133,7 @@ nav .container{
     align-items: center;
     gap: 10px;
     border-radius: 20px;
-    border: 1px solid gray;
+    border: 1px solid blue;
     transition: all .3s ease;
     padding: 5px 10px;
 }
@@ -149,11 +150,13 @@ nav .container{
     background-color: transparent;
     outline: none;
 }
-
+.search input::placeholder{
+    color: blue;
+}
 .search label{
     cursor: pointer;
     font-size: 16px;
-    color: gray;
+    color: blue;
 }
 
 
@@ -166,19 +169,177 @@ nav .container{
 
 .hero .container{
     border-radius: 10px;
-    border: 2px solid blue;
-    background-color: cyan;
-    padding: 20px 0px;
+    background: linear-gradient(90deg, #25043E, #420079, #BCE8FF,#420079);
+    padding-top: 20px;
+    overflow: hidden;
+    position: relative;
 }
 
-.hero .chegirma{
+.qadash{
+    top: 180px;
+    right: 20px;
+    text-align: center;
+    color: black;
+    position: absolute;
+    font-size: 28px;
+    width: 40px;
+    height: 40px;
+    background-color: #CFE4FF;
+    cursor: pointer;
+    border-radius: 50%;
+    transition: all .3s ease;
+    animation: qadash 2s linear infinite;
+}
+.qadash:hover{
+    background-color: lime;
+}
+.qadash:active{
+    background-color: blue;
+}
+.qadash_left{
+    top: 180px;
+    left: 20px;
+    color: white;
+    text-align: center;
+    color: black;
+    position: absolute;
+    font-size: 28px;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #CFE4FF;
+    animation: qadash 2s linear infinite;
+    transition: all .3s ease;
+}
+.qadash_left:hover{
+    background-color: lime;
+}
+.qadash_left:active{
+    background-color: blue;
+}
+@keyframes qadash{
+    0%{
+        transform: scale(1);
+        color: black;
+    }
+    50%{
+        transform: scale(1.2);
+        color: blue;
+    }
+    100%{
+        transform: scale(1);
+        color: green;
+    }
+}
+
+.hero .chegirma a{
+    text-decoration: none   ;
     width: 1000px;
-    border-radius: 30px;
+    border-radius: 70px 0px 70px 0px;
     margin: 0 auto;
-    border: 2px solid red;
+    padding: 10px 0px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 130px;
+    background: linear-gradient(90deg, #EBDEFE, #CFE4FF, #BCE5FF);
 }
 
+.chegirma_muxlat{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0px 0px 10px 10px;
+    padding-top: 20px;
+}
+
+.chegirma_muxlat h2{
+    width: 400px;
+    font-size: 23px;
+    text-align: center;
+    padding: 5px 0px;
+}
+.barakali{
+    background-color: #FF007D;
+    color: white;
+}
+
+.dekabr{
+    color: black;
+    background-color: yellow;
+}
+
+.ckeklangan{
+    background-color: blueviolet;
+    color: white;
+}
 .rasm{
-
+    width: 300px;
 }
+.rasm img{
+   width: 100%;
+   animation: rasm 4s linear infinite;
+}
+
+@keyframes rasm{
+    0%{
+        transform: rotate(0deg);
+    }
+    50%{
+        transform: rotate(-180deg);
+    }
+    100%{
+        transform: rotate(-360deg);
+    }
+}
+
+
+
+.chegirma_info{
+
+    text-align: right;
+}
+.chegirma_info h3{
+    font-size: 36px;
+    color: #420079;
+    margin-bottom: 20px;
+}
+
+.chegirma_info .sale{
+    font-size: 70px;
+    font-weight: 700;
+}
+
+.narx{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: right;
+    margin-bottom: 20px;
+}
+
+.narx .sups{
+    width: 140px;
+    padding: 3px 5px;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 10px;
+    text-align: center;
+    text-decoration: line-through;
+    background-color: lavender;
+}
+
+.narx .persent{
+    width: 90px;
+    height: 50px;
+    border-radius: 30%;
+    text-align: center;
+    font-size: 37px;
+    font-weight: 700;
+    background-color: #FF007D;
+    color: white;
+}
+
+
+
