--- a/css/main.css
+++ b/css/main.css
@@ -4,63 +4,77 @@
     box-sizing: border-box;
 }
 body{
-    background-color: gray;
+    background-image: url("../imgs/orqa\ fon.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
 }
 .container{
     max-width: 1200px;
     margin: 0 auto;
 }
 form{
-    width: 340px;
-    margin: 180px auto;
-    padding: 60px 10px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    background-color: azure;
-    border: 10px groove yellow;
+    width:450px;
+    background-color: rgba(255, 255, 255,0.13);
+    margin: 80px auto;
+    border-radius: 17px;
+    backdrop-filter: blur(10px);
+    border: 5px solid rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 40px rgba(129, 236, 174, 0.6);
+    padding: 20px;
+}
+form *{
+    font-family: 'Quicksand', sans-serif;
+    color:#ffffff;
+    letter-spacing: 1px;
+    outline: none;
+    border: none;
 }
 form h1{
     margin-bottom: 20px;
     font-size: 40px;
-    color: rgb(154, 21, 21);
+    color: white;
+    text-align: center;
 }
 .loginlar{
     list-style: none;
-    width: 300px;
+    line-height: 60px;
 }
 .loginlar li{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    margin-bottom: 10px;
     justify-content: space-between;
+    margin-bottom: 30px;
 }
 
 .loginlar label{
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 700;
 }
     
 .loginlar input{
-    width: 180px;
-    outline: none;
-    border: 1px solid gray;
-    padding: 3px 4px;
-    transition: all .3s ease;
+    padding: 11px 15px;
+    font-size: 14px;
+    font-weight: 300;
+    background: rgba(0, 0, 0, 0.22);
+    border: 2px solid #38363654;
+    border-radius: 5px;
+    width: 100%;
 }
 .loginlar input:hover{
     box-shadow: 0px 0px 5px 4px gray;
-}
-.loginlar input::placeholder{
-    color: gray;
+    background: #434343;
+    transition: all 0.50s ease;
 }
 
+::placeholder {     
+    color: #e5e5e5;
+}
 .loginlar .document a{
     font-size: 16px;
     text-decoration: none;
-    color: rgb(89, 19, 19);
+    color: white;
    transition: all .3s ease;
    text-shadow: 0px 0px 10px red;
 
@@ -68,28 +82,32 @@ form h1{
 
 
 .loginlar .document a:hover{
-    color: blue;
+    color: yellow;
 }
 
 .btns{
-    margin-top: 10px;
+    margin-top: -30px;
     display: flex;
+    justify-content: center;
     gap: 30px;
 }
 
 .btns button{
-    padding: 5px 20px;
+    padding: 8px 40px;
     background-color: azure;
     border: 1px solid gray;
+    border-radius: 10px;
     font-size: 16px;
     color: rgb(132, 15, 15);
     box-shadow: 0px 0px 10px 4px gray;
     transition: all .3s ease;
     cursor: pointer;
+    
 }
 
 .btns button:hover{
     transform: scale(1.1);
+    background-color: #629677;
 }
 
 button a{
